# wisdom-ai-tracing

./: .gitignore  .gitmodules  .mcp.json  .mcp.json.example  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.enterprise  README.md  SECURITY.md  docker-compose.enterprise.yml  docker-compose.test.yml  docker-compose.yml
crates/tracevault-server/: CHANGELOG.md  Cargo.toml  README.md
crates/tracevault-server/migrations/: 016_chat_rag.sql  017_chat_indexing_chunk_count.sql  018_sso.sql  019_policy_evaluations.sql  020_case_insensitive_org_name.sql  021_events_is_error.sql  022_validation_window.sql  023_policy_evaluation_is_synthetic.sql  024_user_anthropic_keys.sql  025_user_anthropic_keys_max_concurrent.sql  026_rename_validation_window_to_verification_phase.sql  027_credentials_and_routing.sql  028_clone_recovery.sql  028_llm_calls.sql  029_clone_retry.sql  030_events_hook_event_name.sql  031_llm_calls.sql  032_analytics_usage_source.sql  033_proxy_message_dedup.sql  034_llm_calls_outcome_check.sql  035_events_identity_dedup.sql  036_events_uuid_ordering.sql
crates/tracevault-server/src/: auth.rs  encryption.rs  error.rs  extensions.rs  extractors.rs  lib.rs  llm.rs  main.rs  permissions.rs  plugins.rs  pricing_sync.rs  proxy_url.rs  repo_manager.rs  signing.rs  story.rs
crates/tracevault-server/src/api/: agent_instructions.rs  analytics.rs  auth.rs  chat.rs  chat_indexing.rs  ci.rs  code.rs  compliance.rs  github.rs  invites.rs  me.rs  mod.rs  orgs.rs  policies.rs  pricing.rs  proxy.rs  proxy_capture.rs  repos.rs  session_detail.rs  sso.rs  traces_ui.rs
crates/tracevault-server/src/repo/: chat_conversations.rs  chat_embeddings.rs  chat_messages.rs  compliance.rs  credentials.rs  events.rs  llm_calls.rs  mod.rs  orgs.rs  policies.rs  repos.rs  routing.rs  sealing.rs  sessions.rs  user_anthropic_keys.rs
crates/tracevault-server/src/service/: chat.rs  (+8 more)
crates/tracevault-server/tests/: branch_cost_test.rs  cost_gating_test.rs  dedup_test.rs  event_identity_dedup_test.rs  invites_test.rs  llm_calls_test.rs  me_credentials_test.rs  migration_027_test.rs  plugins_seams_test.rs  proxy_integration.rs  proxy_real_anthropic.rs  rate_limit_test.rs  repo_credentials_test.rs  repo_events_test.rs  repo_policies_test.rs  repo_repos_test.rs  repo_routing_test.rs  repo_sessions_test.rs  repo_user_anthropic_keys_test.rs  sliding_session_test.rs  usage_source_test.rs  verification_gate_test.rs
(+172 files in other folders)
