[package]
name = "tracevault-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Server for TraceVault - AI code tracing and attribution"
readme = "README.md"
keywords = ["tracing", "attribution", "ai", "server"]
categories = ["web-programming", "development-tools"]

[dependencies]
tracevault-core = { path = "../tracevault-core", version = "0.8" }
axum = { version = "0.8", features = ["macros"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
argon2 = "0.5"
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
http = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
git2 = "0.20"
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"
aes-gcm = "0.10"
dotenvy = "0.15.7"
urlencoding = "2"
thiserror.workspace = true
tower_governor = "0.6"
pgvector = { version = "0.4", features = ["sqlx"] }
fastembed = { version = "4", optional = true }

[dependencies.tracevault-enterprise]
path = "../../enterprise"
optional = true

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }

[features]
default = []
enterprise = ["dep:tracevault-enterprise", "dep:fastembed"]
